@@ -1,3 +1,8 @@
+2004-11-02  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/18282
+	* gcc.c-torture/compile/20041102-1.c: New test.
+
 2004-11-01  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c-torture/execute/builtins/chk.h: New.
