@@ -1,3 +1,9 @@
+2004-11-02  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/18282
+	* c-common.c (handle_mode_attribute): Allow mode attribute
+	on enums when the mode is integral.
+
 2004-11-24  Jakub Jelinek  <jakub@redhat.com>
 
 	* builtins.c (fold_builtin_object_size): Add
